--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ jarvis_cmd.egg-info/requires.txt
 jarvis_cmd.egg-info/top_level.txt
 __pycache__/constants.cpython-35.pyc
 __pycache__/utils.cpython-35.pyc
+MyTesting.http
